BAC: Remove tensorflow and update Dockerfile

--- a/data_science_abstract/Dockerfile
+++ b/data_science_abstract/Dockerfile
@@ -3,5 +3,13 @@ FROM python:latest
 # Run this before copying requirements for cache efficiency
 RUN pip install --upgrade pip
 
+# Add dependencies.
+COPY requirements.txt /tmp
+WORKDIR /tmp
 RUN pip install -r requirements.txt
-ENTRYPOINT ['python3']
+
+# What port are we working under.
+EXPOSE 8000
+
+# Start python3
+CMD ["python3"]
