--- a/data_science_abstract/Dockerfile
+++ b/data_science_abstract/Dockerfile
@@ -7,9 +7,10 @@ RUN pip install --upgrade pip
 COPY requirements.txt /tmp
 WORKDIR /tmp
 RUN pip install -r requirements.txt
+RUN pip install jupyter
 
 # What port are we working under.
-EXPOSE 8888
+# EXPOSE 8888
 
 # Run Jupyter
 CMD ["jupyter", "notebook", "--port=8888", "--no-browser", "--ip=0.0.0.0", "--allow-root"]
