BAC: Additional configurations to be able to connect to a database and standard data operations

--- a/data_science_abstract/Dockerfile
+++ b/data_science_abstract/Dockerfile
@@ -3,15 +3,13 @@ FROM python:latest
 # Run this before copying requirements for cache efficiency
 RUN pip install --upgrade pip
 
-# Add dependencies.
+# Add dependencies. [requirements.txt, data_methods, configuration files]
 COPY requirements.txt /tmp
+ADD opt /tmp/opt
+ADD data_methods /tmp/data_methods
 WORKDIR /tmp
 RUN pip install -r requirements.txt
 RUN pip install jupyter
 
-# What port are we working under.
-# EXPOSE 8888
-
 # Run Jupyter
 CMD ["jupyter", "notebook", "--port=8888", "--no-browser", "--ip=0.0.0.0", "--allow-root"]
-#CMD /bin/bash
