BAC: Update Dockerfile & docker entrypoint sh script

--- a/data_science_abstract/Dockerfile
+++ b/data_science_abstract/Dockerfile
@@ -6,6 +6,9 @@ FROM continuumio/miniconda3:latest
 
 WORKDIR /app
 
+# Make configuration directory.
+RUN mkdir -p /opt/api
+
 # Linux
 RUN apt-get update && apt-get install -y build-essential && \
     conda update -n base conda && \
@@ -13,6 +16,8 @@ RUN apt-get update && apt-get install -y build-essential && \
     
 ## Install Python utilities
 RUN conda install -c conda-forge tqdm
+
+# Add code from GitHub to working directory if applicable
 
 # Add additional files to working directory
 COPY docker-entrypoint.sh .
@@ -22,8 +27,6 @@ COPY hello_world.py .
 RUN conda install -c conda-forge tensorflow
 RUN pip install tflearn
 RUN pip install keras
-
-# Add code from GitHub to working directory if applicable
 
 # Create the environment. Also install Jupyter & set permissions for our entrypoint script.
 COPY environment.yml .
@@ -42,5 +45,5 @@ EXPOSE 8888
 RUN chmod +x docker-entrypoint.sh
 
 # Code to execute when the container is started
-#ENTRYPOINT ["conda", "run", "-n", "base_install", "./docker-entrypoint.sh"]
-ENTRYPOINT ["conda", "run", "-n", "base_install", "./docker-entrypoint.sh", "hello_world.py"]
+ENTRYPOINT ["conda", "run", "-n", "base_install", "./docker-entrypoint.sh"]
+#CMD python hello_world.py
