--- a/data_science_abstract/opt/api/config/python_config.ini
+++ b/data_science_abstract/opt/api/config/python_config.ini
@@ -1,5 +1,5 @@
 [MysqlConnectionValues]
-MysqlConnectionStringPrefix = mysql://
+MysqlConnectionStringPrefix = mysql+mysqldb://
 MysqlPortNumber = 3306
 
 [Instance]
