BAC: Modify infrastructure

--- a/data_science_abstract/Dockerfile
+++ b/data_science_abstract/Dockerfile
@@ -1,56 +1,58 @@
-# Instead of using conda activate, there's another way to run a command inside an environment. 
-# conda run -n [environment_name] [your-command] will run command in environment.
-
 # Download base image and set working directory
-FROM continuumio/miniconda3:latest
+FROM ubuntu:16.04
 
-WORKDIR /app
+USER root
 
 # Linux
-RUN apt-get update && apt-get install -y build-essential && \
-    conda update -n base conda && \
-    conda update --all
+RUN	apt-get update && apt-get install -y build-essential && \
+	apt -y install openjdk-8-jdk openssh-client openssh-server rsync sudo vim git figlet python3 python3-pip
+
+RUN sudo ln -s /usr/bin/python3 /usr/bin/python
     
-RUN apt-get install -y default-libmysqlclient-dev
-RUN apt-get install -y default-mysql-server
-    
-## Install Python utilities
-RUN conda install -c conda-forge tqdm
+# Install Jupyter
+RUN pip3 install --upgrade pip
+RUN pip install jupyter
+
+# Install MySQL
+RUN sudo apt update \
+	&& sudo DEBIAN_FRONTEND=noninteractive apt -y install mysql-server \
+	&& sudo usermod -d /var/lib/mysql/ mysql
 
 # Add code from GitHub to working directory if applicable
 
+# Create core_user
+RUN adduser --disabled-password --gecos '' core_user
+RUN adduser core_user sudo
+RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+USER core_user
+WORKDIR /home/core_user
+
 # Add additional files to working directory
 COPY docker-entrypoint.sh .
-COPY hello_world.py .
 COPY opt ./opt
 COPY notebooks ./notebooks
 
-# TensorFlow
-RUN conda install -c conda-forge tensorflow
-RUN pip install tflearn
-RUN pip install keras
-
-# Create the environment. Also install Jupyter & set permissions for our entrypoint script.
-COPY environment.yml .
-RUN conda update -n base -c defaults conda && \
-   conda env create -f environment.yml
+# Add Python dependencies
+RUN pip install keras && \
+   pip install matplotlib && \
+   pip install numpy && \
+   pip install pandas && \
+   pip install pymysql && \
+   pip install scikit-learn && \
+   pip install scipy && \
+   pip install seaborn && \
+   pip install sqlalchemy && \
+   pip install statsmodels && \
+   pip install tensorflow && \
+   pip install tflearn && \
+   pip install urllib3 && \
+   pip install xgboost
    
-# Make RUN commands use the new environment. (Activate environment)
-SHELL ["conda", "run", "-n", "base_install", "/bin/bash", "-c"]
-
-# XGBoost
-RUN pip install xgboost
-
-# MySQLDB
-RUN pip install mysqlclient
-RUN service mysql start
-RUN /etc/init.d/mysql start
-   
-# Jupyter Notebook
+# Expose Jupyter Notebook port & MySQL port
 EXPOSE 8888
+EXPOSE 3306
+EXPOSE 22
 
-RUN chmod +x docker-entrypoint.sh
-
-# Code to execute when the container is started
-ENTRYPOINT ["conda", "run", "-n", "base_install", "./docker-entrypoint.sh"]
-#CMD python hello_world.py
+# Give permissions for entrypoint and execute entrypoint.
+RUN sudo chmod +x docker-entrypoint.sh
+ENTRYPOINT ./docker-entrypoint.sh; bash
