BAC: Need to make debug statement in dockerfile a build argument from build.sh. Also will need to make docker-entrypoint directory and python script come in from build arguments

--- a/data_science_abstract/Dockerfile
+++ b/data_science_abstract/Dockerfile
@@ -90,4 +90,4 @@ EXPOSE 3306
 
 # Give permissions for entrypoint and execute entrypoint.
 RUN sudo chmod +x docker-entrypoint.sh
-ENTRYPOINT ./docker-entrypoint.sh DEBUG
+ENTRYPOINT ./docker-entrypoint.sh PROD
