--- a/data_science_abstract/Dockerfile
+++ b/data_science_abstract/Dockerfile
@@ -47,6 +47,9 @@ ENV PROD_FOLDER_GLOBAL=$PROD_FOLDER
 ARG PROD_SCRIPT_COMMAND=${PROD_SCRIPT_COMMAND}
 ENV PROD_SCRIPT_COMMAND_GLOBAL=$PROD_SCRIPT_COMMAND
 
+ARG PROD_SCRIPT_FILE=${PROD_SCRIPT_FILE}
+ENV PROD_SCRIPT_FILE_GLOBAL=$PROD_SCRIPT_FILE
+
 # Linux
 RUN	apt-get update && apt-get install -y build-essential && \
 	apt -y install openjdk-8-jdk openssh-client openssh-server rsync sudo vim git figlet python3 python3-pip
@@ -98,4 +101,4 @@ EXPOSE 22
 
 # Give permissions for entrypoint and execute entrypoint.
 RUN sudo chmod +x docker-entrypoint.sh
-ENTRYPOINT ./docker-entrypoint.sh $RUN_SCRIPT_GLOBAL $PROD_FOLDER_GLOBAL $PROD_SCRIPT_COMMAND_GLOBAL
+ENTRYPOINT ./docker-entrypoint.sh $RUN_SCRIPT_GLOBAL $PROD_FOLDER_GLOBAL $PROD_SCRIPT_COMMAND_GLOBAL $PROD_SCRIPT_FILE_GLOBAL
